@@ -1,3 +1,8 @@
+2008-09-12  Zoltan Varga  <vargaz@gmail.com>
+
+	* glib/GType.cs (FindTypeInReferences): Put a try-catch around the assembly
+	loading as failure to load a referenced assembly is not really an error.
+
 2008-09-12  Mike Gorse <mgorse@novell.com>
 
 	* atk/Object.custom, atk/glue/object.c: Support GetIndexInParent.
